--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "quik-cash-client",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://alendor22.github.io/quik-cash-client",
   "dependencies": {
     "@airbrake/browser": "^1.1.3",
     "@testing-library/jest-dom": "^4.2.4",
@@ -9,6 +10,7 @@
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.5.0",
     "cursive": "^0.3.0",
+    "gh-pages": "^3.1.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
@@ -24,10 +26,10 @@
     "supports-color": "^7.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+     "predeploy": "npm run build",
+     "deploy": "gh-pages -b master -d build",
+     "start": "react-scripts start",
+     "build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": "react-app"
