--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "salt": "^0.5.5",
     "supports-color": "^7.1.0"
   },
-  "scripts": {
+  "react-scripts": {
      "predeploy": "npm run build",
      "deploy": "gh-pages -b master -d build",
      "start": "react-scripts start",
